--- a/src/escola-octogono-back/src/main/resources/application.properties
+++ b/src/escola-octogono-back/src/main/resources/application.properties
@@ -1,6 +1,8 @@
-spring.datasource.url= jdbc:postgresql://localhost:5432/escola-octogono-db
-spring.datasource.username=postgres
+spring.datasource.url= jdbc:postgresql://localhost:5432/escola_octogono_db
+spring.datasource.username=carol
 spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+server.port = 8888
