--- a/src/escola-octogono-back/src/main/resources/application.properties
+++ b/src/escola-octogono-back/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url= jdbc:postgresql://localhost:5432/escola_octogono_db
+spring.datasource.url= jdbc:postgresql://containers-us-west-61.railway.app:7356/railway
 spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.password=eMBQPgLGySwYAloRHPRt
 
 spring.jpa.hibernate.ddl-auto=update
 
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+server.port=8888
