--- a/src/escola-octogono-back/src/main/resources/application.properties
+++ b/src/escola-octogono-back/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url= jdbc:postgresql://localhost:5432/escola-octogono-db
+spring.datasource.url= jdbc:postgresql://containers-us-west-162.railway.app:7257/railway
 spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.password=WVXjL5GmXNSvjz7a2ROF
 
 spring.jpa.hibernate.ddl-auto=update
 
